--- a/en/index.html
+++ b/en/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <strong>Navigation:</strong>
-        <a href="/dsa-versions-lab-4/index.html">All versions</a> |
-        <a href="/dsa-versions-lab-4/ru/index.html">Current Russian version</a> |
-        <a href="/dsa-versions-lab-4/en/index.html">Current English version</a>
+        <a href="/dsa-lab-4/index.html">All versions</a> |
+        <a href="/dsa-lab-4/ru/index.html">Current Russian version</a> |
+        <a href="/dsa-lab-4/en/index.html">Current English version</a>
     </nav>
 
     <h1>English Version of the Website</h1>
