--- a/en/index.html
+++ b/en/index.html
@@ -23,9 +23,8 @@
         <h2>Specialization</h2>
         <p>Field of study: <strong>38.03.05 "Business Informatics"</strong></p>
         <p>Enrollment year: <strong>2022</strong></p>
-        
-        <p><strong>some changes</strong></p>
-        <p>new changes</p>
+
+        <p>Changes 1!!!</p>
         
         <h2>Technologies</h2>
         <ul>
