--- a/ru/index.html
+++ b/ru/index.html
@@ -23,6 +23,8 @@
         <h2>Специальность</h2>
         <p>Направление подготовки: <strong>38.03.05 "Бизнес-информатика"</strong></p>
         <p>Год набора: <strong>2022</strong></p>
+
+        <p>Я тут что-то меняю!!!</p>
         
         
         <h2>Технологии</h2>
