--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <strong>Navigation:</strong>
+        <p>Navigation:</p>
         <a href="/dsa-lab-4/index.html">All versions</a> |
         <a href="/dsa-lab-4/ru/index.html">Current Russian version</a> |
         <a href="/dsa-lab-4/en/index.html">Current English version</a>
@@ -21,8 +21,8 @@
         <p>This is the 4th laboratory work in the subject "Software Application Development"</p>
         
         <h2>Specialization</h2>
-        <p>Field of study: <strong>38.03.05 "Business Informatics"</strong></p>
-        <p>Enrollment year: <strong>2022</strong></p>
+        <p>Field of study: 38.03.05 "Business Informatics"</p>
+        <p>Enrollment year: 2022</p>
 
         <p>Changes 1!!!</p>
         
@@ -34,8 +34,5 @@
             <li>GitHub Actions</li>
         </ul>
     </div>
-
-    <footer>
-    </footer>
 </body>
 </html>
