--- a/ru/index.html
+++ b/ru/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <strong>Навигация:</strong>
+        <p>Навигация:</p>
         <a href="/dsa-lab-4/index.html">Все версии </a> |
         <a href="/dsa-lab-4/ru/index.html">Текущая русская версия</a> |
         <a href="/dsa-lab-4/en/index.html">Текущая английская версия</a>
@@ -21,8 +21,8 @@
         <p>Это 4 лабораторная работа по предмету "Разработка программных приложений"</p>
         
         <h2>Специальность</h2>
-        <p>Направление подготовки: <strong>38.03.05 "Бизнес-информатика"</strong></p>
-        <p>Год набора: <strong>2022</strong></p>
+        <p>Направление подготовки: 38.03.05 "Бизнес-информатика"</p>
+        <p>Год набора: 2022</p>
 
         <p>Я тут что-то меняю!!!</p>
         
@@ -35,8 +35,5 @@
             <li>GitHub Actions</li>
         </ul>
     </div>
-
-    <footer>
-    </footer>
 </body>
 </html>
