--- a/index.html
+++ b/index.html
@@ -23,4 +23,5 @@
 <div>Version 2<br>
 <a href='./v2/ru/index.html'>Русская</a> | 
 <a href='./v2/en/index.html'>English</a></div>
-</body></html>
+</body>
+</html>
