--- a/en/index.html
+++ b/en/index.html
@@ -25,6 +25,7 @@
         <p>Enrollment year: 2022</p>
 
         <p>Changes 1!!!</p>
+        <p>Changes 2!!!</p>
         
         <h2>Technologies</h2>
         <ul>
