--- a/ru/index.html
+++ b/ru/index.html
@@ -25,6 +25,7 @@
         <p>Год набора: 2022</p>
 
         <p>Я тут что-то меняю!!!</p>
+        <p>И снова изменения</p>
         
         
         <h2>Технологии</h2>
