--- a/en/index.html
+++ b/en/index.html
@@ -26,6 +26,7 @@
 
         <p>Changes 1!!!</p>
         <p>Changes 2!!!</p>
+        <p>Changes 3!!!</p>
         
         <h2>Technologies</h2>
         <ul>
