--- a/ru/index.html
+++ b/ru/index.html
@@ -26,6 +26,7 @@
 
         <p>Я тут что-то меняю!!!</p>
         <p>И снова изменения</p>
+        <p>Пишу о том, что что-то меняю!</p>
         
         
         <h2>Технологии</h2>
