--- a/ru/index.html
+++ b/ru/index.html
@@ -28,6 +28,7 @@
         <p>И снова изменения</p>
         <p>Пишу о том, что что-то меняю!</p>
         <p>Изменения</p>
+        <p>Изменения еще одни</p>
         
         
         <h2>Технологии</h2>
