--- a/ru/index.html
+++ b/ru/index.html
@@ -29,6 +29,7 @@
         <p>Пишу о том, что что-то меняю!</p>
         <p>Изменения</p>
         <p>Изменения еще одни</p>
+        <p>Меняю</p>
         
         
         <h2>Технологии</h2>
